--- a/sample.html
+++ b/sample.html
@@ -16,6 +16,62 @@
 	});
 
 	React.render(<MyComponent name="Amit"/>, document.getElementById('mount-point'));
+	
+	var FilteredList = React.createClass({
+		getInitialState : function(){
+			return {
+					initialItems :[
+							"Apples",
+					         "Broccoli",
+					         "Chicken",
+					         "Duck",
+					         "Eggs",
+					         "Fish",
+					         "Granola",
+					         "Hash Browns"
+							 ],
+					items : []
+			}
+		},
+		componentWillMount : function(){
+			this.setState(({items : this.state.initialItems}))
+		},
+		filterList : function(event){
+			var updatedList  = this.state.initialItems;
+			updatedList = updatedList.filter(function(item){
+				return item.toLowerCase().search(event.target.value.toLowerCase())!==-1;
+			});
+			this.setState({items : updatedList});
+		},
+		render  : function(){
+			return (<div className="filter-list">
+					<input type="text" placeholder="Search" onChange={this.filterList}/>
+					<List items={this.state.items}/>
+				</div>
+				)
+		}
+	});
+	
+		var List = React.createClass({
+			render : function(){
+				return (
+				<ul>
+					{
+						this.props.items.map(function(item){
+						return <li key ={item}>{item}</li>
+						})
+					
+					}
+					
+				</ul>
+			
+			)
+			}
+		
+		});
+		
+		React.render(<FilteredList/>, document.getElementById('list'));
+	
 </script>
 
 </head>
@@ -23,6 +79,7 @@
 <body>
 	
 	<div id ="mount-point"></div>
+	<div id='list'></div>
 
 
 </body>
