--- a/react.html
+++ b/react.html
@@ -9,6 +9,12 @@
 	<script type="text/jsx">
 		
 		var App = React.createClass({
+			getInitialState : function(){
+				return {
+				text : "This is the inital State, please input to modify"
+				};
+				
+			},
 			getDefaultProps : function(){
 				return {
 					text : "This is a default hello message"
@@ -24,6 +30,7 @@
 					return (
 					<div>
 						<b>BOLD</b>
+						<input type="text" defaultValue={this.state.text}/>
 						<h1> {this.props.text} {name}</h1>
 					</div>
 					);
