--- a/react.html
+++ b/react.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="sample.css" />
+<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" />
 <script src="https://fb.me/react-with-addons-0.13.3.js"></script>
 <script src="https://fb.me/JSXTransformer-0.13.3.js"></script>
 </head>
@@ -40,12 +41,16 @@
 			<label><h1>{this.state.green}</h1></label>
 	        <Slider ref="blue"  update={this.update} value="200" />
 			<label><h1>{this.state.blue}</h1></label>
+			
+			
+			
 	       </div>
 	      );
 
 	  }
 	});
 
+	
 	var Slider = React.createClass({
 	  render:function(){
 	    return (
@@ -57,9 +62,46 @@
 	  }
 	});
 
+	var Button = React.createClass({
+		render : function(){
+			return (
+				<button>{this.props.children}</button>
+			)
+		}
+	
+	});
+	
+	var Heart = React.createClass({
+		render : function(){
+			return (
+			<span className="glyphicon glyphicon-heart"></span>
+			);
+		}
+	});
+	var App2 = React.createClass({
+  	  render:function(){
+  	    return (
+  	       <Button>I <Heart/> React!</Button>
+  	      );
+
+  	  }
+	});
+	
 	React.render(<App txt="this is the txt prop"  />, document.getElementById('mount-point'));
+	
+	React.render(<App2 />, document.getElementById('mount2'));
+	
+	
+	
+	
 	</script>
+	
+	
 	<div id ="mount-point"></div>
+	
+	
+	<div id='mount2'>
+	
 
 </body>
 
